--- a/Webshop/public/app.css
+++ b/Webshop/public/app.css
@@ -1,18 +1,63 @@
 body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background: ivory;
-    color: darkgreen;
+    color: black;
+    padding:20px;
     max-width: 600px;
     margin: auto;
     font-family: sans-serif;
 }
 
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.product-card {
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    padding: 20px;
+    margin-bottom: 20px;
+}
 p {
+    color:black;
     line-height: 1.6;
 }
+
+.product-card h3 {
+    color: #333;
+    font-size: 18px;
+}
+
 
 /*every article except the first one:*/
 article + article {
     margin-top: 3rem;
     padding-top: 3rem;
     border-top: 1px solid #333;
+}
+
+div {
+    border: none;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+a {
+    color: blue;
+    text-decoration: none;
+}
+
+/* Style buttons */
+button {
+    background-color: #4f4caf;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color: #852392;
 }
