--- a/Webshop/public/app.css
+++ b/Webshop/public/app.css
@@ -19,6 +19,7 @@ body {
     padding: 20px;
     margin-bottom: 20px;
 }
+
 p {
     color:black;
     line-height: 1.6;
@@ -53,6 +54,7 @@ button {
     background-color: #4f4caf;
     color: white;
     padding: 10px 20px;
+    margin-bottom: 20px;
     border: none;
     cursor: pointer;
     border-radius: 5px;
